--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,6 @@ jobs:
           echo "Getting content"
           git fetch
           git pull
+          npm install
           npm run build
           echo "Finished"
