Update the script in yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           echo "Passed"
 
   cd-project:
+    needs: test-project
     runs-on: self-hosted
     steps:
       - name: Continuous Delivery
@@ -25,6 +26,7 @@ jobs:
           echo "Getting content"
           git fetch
           git pull
+          echo "Building project for production"
           npm install
           npm run build
           echo "Finished"
